Added New Stuff

--- a/DATA-SCIENCE-PROJECTS/python-fundamentals.ipynb
+++ b/DATA-SCIENCE-PROJECTS/python-fundamentals.ipynb
@@ -5,7 +5,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# White space formatting \n",
+    "for i in [1,2,3,4,5]:\n",
+    "    print(i)\n",
+    "    for j in [1,2,3,4,5]:\n",
+    "        print(j)\n",
+    "        print(i + j)\n",
+    "    print(i)\n",
+    "print(\"Done Looping\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re \n",
+    "my_regrex = "
+   ]
   }
  ],
  "metadata": {
