This is good stuff

--- a/DATA-SCIENCE-PROJECTS/python-fundamentals.ipynb
+++ b/DATA-SCIENCE-PROJECTS/python-fundamentals.ipynb
@@ -732,6 +732,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\n"
+    }
+   ],
+   "source": [
+    "print(\"Alessio Simoya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
